--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_edit_text_hint">Enter the title</string>
     <string name="content_edit_text_hint">Write your note here</string>
 
+    <string name="popup_select_notes">Select notes</string>
+
 </resources>
