added button to the popup menu to delete the selected notes. Adding notes, updating and deleting them works now

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="content_edit_text_hint">Write your note here</string>
 
     <string name="popup_select_notes">Select notes</string>
+    <string name="popup_delete_notes">Delete selected notes</string>
 
 </resources>
