--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="content_edit_text_hint">Write your note here</string>
 
     <string name="popup_select_notes">Select</string>
+    <string name="popup_select_all_notes">Select all</string>
     <string name="popup_delete_notes">Delete selected</string>
 
 </resources>
