reseting to fragments finished with all activities for title, content text and images; Need to do the same for audio recording as well

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="popup_select_all_notes">Select all</string>
     <string name="popup_delete_notes">Delete selected</string>
 
+    <string name="default_title">title1</string>
+
 </resources>
